Zoom overflow issue on about section fixed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: 1px solid red;
 }
 
 html {
@@ -137,21 +138,19 @@ footer {
 }
 
 .about-container {
-  height: 100vh;
+  height: auto;
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0rem 12%;
+  padding: 6rem 2rem;
   position: relative;
-  overflow: hidden;
 }
 
 .about-container__description {
-  max-width: 38%;
+  max-width: 40%;
   max-height: 90%;
-  position: absolute;
-  justify-content: flex-start;
-  top: 7rem;
-  bottom: 0;
-  left: 15.5rem;
 }
 
 .about-container__header {
@@ -169,15 +168,12 @@ footer {
 }
 
 .about-container__collage {
-  width: 35%;
-  height: 80%;
+  width: 50rem;
+  height: 67rem;
   display: grid;
   grid-template-rows: 40% auto;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
-  position: absolute;
-  right: 15.5rem;
-  top: 7rem;
 }
 
 .about-container__photo-1 {
@@ -205,6 +201,8 @@ footer {
 
 .about-container__view-video-btn {
   border: none;
+  width: 65%;
+  height: 11%;
   padding: 3rem 8rem;
   background-image: linear-gradient(to bottom right, var(--color-hero-1), var(--color-button-1));
   border-radius: 50px;
